fix: layer logic