@@ -12,23 +12,44 @@ import java.util.stream.Stream;
 
 public class CanvasState<T extends Figure> {
     private static final int STARTING_LAYERS = 3;
+    private static final int DEFAULT_LAYER = 0;
     private int layersCreated = STARTING_LAYERS;
     private final List<Layer<T>> layers = new ArrayList<>();
+    private int currentLayer = DEFAULT_LAYER;
 
-    public void addFigure(T figure, Layer<T> layer) {
-        layer.addFigure(figure);
+    public CanvasState() {
+        for (int i = 1; i <= STARTING_LAYERS; i++) {
+            layers.add(new Layer<>(i));
+        }
     }
 
-    public void deleteFigure(T figure, Layer<T> layer) {
-        layer.deleteFigure(figure);
+    public void setCurrentLayer(Layer<T> l){
+//        todo validar
+        this.currentLayer = this.layers.indexOf(l);
+    }
+
+    public List<Layer<T>> getLayers() {
+        return layers;
+    }
+
+    public Layer<T> addLayer() {
+        return new Layer<>(layersCreated++);
+    }
+
+    public void addFigure(T figure) {
+        layers.get(currentLayer).addFigure(figure);
+    }
+
+    public void deleteFigure(T figure) {
+        layers.get(currentLayer).deleteFigure(figure);
     }
 
     public Iterable<T> figures() {
         return layers
                 .stream()
-//                .filter(layer -> !layer.isHidden())
+                .filter(Layer::isVisible)
                 .flatMap(l -> l.figures().stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Stream<T> intersectingFigures(Point location) {
@@ -40,7 +61,7 @@ public class CanvasState<T extends Figure> {
     }
 
     public int nextLayer() {
-        return ++layersCreated;
+        return layersCreated++;
     }
 
 }
